# file-send

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  test-send.txt
.cargo/: config.toml
.github/workflows/: rust.yml
crates/client/: Cargo.toml  Trunk.toml  index.html  styles.css
crates/client/src/: app.rs  filetype.rs  log.rs  main.rs  protocol.rs  qr.rs  reconnect.rs  rows.rs  signaling.rs  transfer.rs  transfer_state.rs  ui.rs  webrtc.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  limiter.rs  main.rs  rooms.rs  ws.rs
crates/server/tests/: signaling.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
docs/: testing.md
docs/superpowers/plans/: 2026-05-30-file-send.md  2026-05-31-accept-before-transfer.md  2026-05-31-file-send-frontend-design.md  2026-06-03-signaling-reconnect.md  2026-06-03-testing-strategy-e2e.md  2026-06-03-testing-strategy-rust.md
docs/superpowers/specs/: 2026-05-30-file-send-design.md  2026-05-31-accept-before-transfer-design.md  2026-05-31-file-send-frontend-design.md  2026-06-03-signaling-reconnect-design.md  2026-06-03-testing-strategy-design.md
e2e/: package-lock.json  package.json  playwright.config.ts
e2e/fixtures/: files.ts  peers.ts
e2e/tests/: cancel.spec.ts  handshake.spec.ts  limits.spec.ts  reconnect.spec.ts  refresh-reclaim.spec.ts  sleep-reconnect.spec.ts  transfer-integrity.spec.ts
