[package]
name = "client"
edition.workspace = true
version.workspace = true

[dependencies]
shared = { path = "../shared" }
serde.workspace = true
serde_json.workspace = true
leptos = { version = "0.8", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
qrcode = { version = "0.14", default-features = false }
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
  "Window", "Location", "Document", "Element", "HtmlElement",
  "HtmlInputElement", "HtmlAnchorElement", "Event", "EventTarget",
  "MessageEvent", "DragEvent", "DataTransfer",
  "WebSocket", "BinaryType",
  "File", "FileList", "Blob", "BlobPropertyBag", "Url",
  "RtcPeerConnection", "RtcConfiguration", "RtcIceServer",
  "RtcDataChannel", "RtcDataChannelInit", "RtcDataChannelState", "RtcDataChannelType",
  "RtcDataChannelEvent", "RtcPeerConnectionIceEvent",
  "RtcSessionDescription", "RtcSessionDescriptionInit", "RtcSdpType",
  "RtcIceCandidate", "RtcIceCandidateInit",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"
